--- a/ReadingList/UI/Home/Component/YomuLineChartView.xib
+++ b/ReadingList/UI/Home/Component/YomuLineChartView.xib
@@ -14,6 +14,7 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="YomuLineChartView" customModule="ReadingList" customModuleProvider="target">
             <connections>
                 <outlet property="lineChartView" destination="dAM-KN-1tZ" id="frc-ke-UbM"/>
+                <outlet property="noDataView" destination="JDg-Xe-hPz" id="N17-re-zd6"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -26,7 +27,36 @@
                     <subviews>
                         <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dAM-KN-1tZ" customClass="LineChartView" customModule="Charts">
                             <rect key="frame" x="0.0" y="0.0" width="704" height="370"/>
+                            <subviews>
+                                <view hidden="YES" userInteractionEnabled="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="JDg-Xe-hPz">
+                                    <rect key="frame" x="0.0" y="0.0" width="704" height="370"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Low-We-Zu2">
+                                            <rect key="frame" x="10" y="151" width="684" height="68"/>
+                                            <string key="text">読み終わった記事のデータはありません。
+
+記事を「既読」にするとデータに反映されます。
+🌟</string>
+                                            <fontDescription key="fontDescription" name="HiraginoSans-W6" family="Hiragino Sans" pointSize="17"/>
+                                            <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstAttribute="trailing" secondItem="Low-We-Zu2" secondAttribute="trailing" constant="10" id="D15-cr-9Vl"/>
+                                        <constraint firstItem="Low-We-Zu2" firstAttribute="centerY" secondItem="JDg-Xe-hPz" secondAttribute="centerY" id="cYN-vK-f89"/>
+                                        <constraint firstItem="Low-We-Zu2" firstAttribute="leading" secondItem="JDg-Xe-hPz" secondAttribute="leading" constant="10" id="fwL-m6-AX2"/>
+                                        <constraint firstItem="Low-We-Zu2" firstAttribute="centerX" secondItem="JDg-Xe-hPz" secondAttribute="centerX" id="qBp-Uo-NMy"/>
+                                    </constraints>
+                                </view>
+                            </subviews>
                             <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <constraints>
+                                <constraint firstItem="JDg-Xe-hPz" firstAttribute="top" secondItem="dAM-KN-1tZ" secondAttribute="top" id="0vl-hT-bxF"/>
+                                <constraint firstItem="JDg-Xe-hPz" firstAttribute="leading" secondItem="dAM-KN-1tZ" secondAttribute="leading" id="O9P-cO-bJg"/>
+                                <constraint firstAttribute="bottom" secondItem="JDg-Xe-hPz" secondAttribute="bottom" id="Usl-Pc-YMc"/>
+                                <constraint firstAttribute="trailing" secondItem="JDg-Xe-hPz" secondAttribute="trailing" id="od4-7r-yxu"/>
+                            </constraints>
                         </view>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="7日前" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jR6-OT-q0O">
                             <rect key="frame" x="8" y="378" width="41" height="20"/>
